# Django-API

./: README.md  pyproject.toml
api/api/: models.py  settings.py  urls.py  views.py
api/api/management/commands/: populate_db.py
api/api/migrations/: 0001_initial.py  0002_alter_employee_gender.py  0003_alter_employee_others.py  0004_alter_employee_others.py  0005_alter_employee_email.py  0006_alter_employee_industry.py  0007_alter_employee_salary_and_more.py
api/api/tests/test_analytical/: test_endpoints.py
api/api/tests/test_employee/: test_crud.py  test_listing.py
dev_ops/: .env.template  dockercompose.yml
